# xiaoverse

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  bazel  gazelle_python.yaml  go.mod  go.sum  m  m.py  multitool.lock.json  requirements.in  requirements.lock.txt  ruff.toml  tools.go
.github/workflows/: merge.yaml
go_tutorial/: BUILD  greetings.go
go_tutorial/cmd/api_server/: BUILD.bazel  main.go
go_tutorial/cmd/greet/: BUILD  greet.go
go_tutorial/cmd/greet_error/: BUILD  greet_error.go
go_tutorial/cmd/quote/: BUILD
go_tutorial/greetings/: BUILD  greetings.go  greetings_test.go
hello_project/: README.md  docker_build.sh
hello_project/workflows/: BUILD.bazel  example.py
helloworld/: BUILD  helloworld.go
ho/: README.md
ho/flyte/hello_project/: BUILD  README.md  docker_build.sh  k8s-namespace.yaml  requirements.txt
ho/flyte/hello_project/workflows/: BUILD
ho/flyte/hello_world/: BUILD  hello_world.py
ho/ray/fastapi_usage/: BUILD  fastapi_usage.py
ho/ray/fastapi_usage/huggingface_usage/: BUILD  huggingface_usage.py
ho/ray/hello_world/: BUILD  hello_world.py
ho/ray/model_composition/: BUILD  model_composition.py
leetcode/best_time_buy_sell_stocks/: BUILD  main.py  main_test.py
leetcode/binary_tree_diameter/: BUILD  main.py  main_test.py
leetcode/binary_tree_least_common_ancestor/: BUILD  main_test.py
leetcode/binarysearch/: BUILD  main.py  main_test.py
leetcode/calculator/: main_test.py
leetcode/disjoint_sets/: BUILD  main.py  main_test.py
leetcode/edit_distance/: BUILD  main_test.py
leetcode/fb_look_and_say/: BUILD  main.py  main_test.py
leetcode/fb_spiral_array/: BUILD  main.py  main_test.py
leetcode/flood_fill/: BUILD  main.py  main_test.py
leetcode/heap/: BUILD  main.py  main_test.py
leetcode/insert_interval/: BUILD  main_test.py
leetcode/invert_binary_tree/: BUILD  main.py  main_test.py
leetcode/k_closest/: BUILD  main_test.py
leetcode/lrucache/: BUILD  main_test.go
leetcode/maximum_swap/: BUILD  main.py  main_test.py
leetcode/merge_sorted_array/: BUILD  main.py  main_test.py
leetcode/merge_two_sorted_lists/: BUILD  main.py  main_test.py
leetcode/peak_element/: BUILD  main.py  main_test.py
leetcode/quickselect/: BUILD  main_test.py
leetcode/quicksort/: BUILD  main_test.py
leetcode/search_rotated_array/: BUILD.bazel  main_test.go
leetcode/simplifypath/: BUILD  main.py  main_test.py
leetcode/sortedcontainers/: BUILD  sortedcontainers.py
leetcode/template/: BUILD  main.py  main_test.py
leetcode/twosum/: BUILD  main.go  main.py  main_test.go  main_test.py
leetcode/valid_palindrome/: BUILD  main.py  main_test.py
leetcode/valid_paranthesis/: BUILD  main.py  main_test.py
llm_from_scratch/: BUILD  notebook.bzl  notebook.py
llm_from_scratch/c2/: BUILD  __init__.py  c2.ipynb  main.py
llm_from_scratch/c3/: BUILD  README.md  __init__.py  c3.ipynb
llm_from_scratch/c4/: BUILD  __init__.py  c4.ipynb
llm_from_scratch/c5/: BUILD  __init__.py  c5.ipynb
recommender/: c5.ipynb
recommender/gnn/: BUILD  __init__.py  gnn.ipynb
sysdesign/video-stream/: BUILD  __main__.py
sysdesign/video-stream/static/: index.html
