load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

go_library(
    name = "_vscode_lib",
    srcs = ["launch_target.go"],
    importpath = "gitlab.com/hooshi/DSA-practice/.vscode",
    visibility = ["//visibility:private"],
)

go_binary(
    name = ".vscode",
    embed = [":_vscode_lib"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "launch_target",
    srcs = ["launch_target.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = ".vscode_pybin",
    srcs = ["launch_target.py"],
    visibility = ["//:__subpackages__"],
)
